# codepack_92

./: .editorconfig  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tanchishe.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  git.rs  lib.rs  main.rs  metadata.rs  packer.rs  plugins.rs  scanner.rs  security.rs  stats.rs  types.rs  watcher.rs
src/components/: CodePreview.vue  DropZone.vue  ExcludeRulesEditor.vue  FileTree.vue  MetadataBar.vue  PresetBar.vue  ReviewPromptBar.vue  SettingsPanel.vue  StatsPanel.vue  StatusBar.vue  ToastContainer.vue
src/composables/: useHighlighter.ts  useToast.ts
src/stores/: useProjectStore.ts  useUIStore.ts
