[package]
name = "codepack"
version = "0.1.0"
description = "CodePack - Source code packing tool"
authors = ["you"]
edition = "2021"

[lib]
name = "codepack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
ignore = "0.4"
tiktoken-rs = "0.6"
git2 = "0.19"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
